# notification

./: Cargo.toml
src/: lib.rs  manager.rs  notifier.rs
src/email/: email.rs  mod.rs
src/telegram/: mod.rs  telegram.rs
tests/: integration_test.rs
