[package]
name = "notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
lettre = {version="0.11.0", optional = true }
teloxide = { version = "0.12.2", optional = true }
tokio = { version = "1.37.0", features = ["full"] }

[features]
telegram = ["teloxide"]
email = ["lettre"]

default = ["telegram"]
